--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
    
     <div class="segundo"> 
-      <p data-aos="fade-up">TE ESPERO PARA FESTEJAR <br>  MI PRIMER AÑITO <br><br>
+      <p data-aos="fade-up">TE INVITAMOS A VOLAR CON NOSTROS <br> EN UN DÍA LLENO DE MAGIA, COLOR Y ALEGRÍA <br> PARA CELEBRAR EL PRIMER AÑO DE VIDA <br> DE NUESTRA MARIPOSITA <br><br>
         📅 14 DE SEPTIEMBRE <br>⏰ DE 12 A 19 HS <br> 📍QUINTA EL REY <br> EMILIO LAMARCA 159 <br> <br>  HACE CLICK PARA SABER COMO LLEGAR</p>
       <a  data-aos="fade-up" class="boton2" target="_blank"  href="https://www.google.com/maps/place/Emilio+Lamarca+159,+B1617EAE+Gral.+Pacheco,+Provincia+de+Buenos+Aires/@-34.4467091,-58.6643489,17z/data=!3m1!4b1!4m6!3m5!1s0x95bca3a8a1c6e6f5:0xad533b93e31b8caf!8m2!3d-34.4467091!4d-58.6643489!16s%2Fg%2F11wq_cb_l_?entry=ttu&g_ep=EgoyMDI1MDgwNC4wIKXMDSoASAFQAw%3D%3D">CÓMO LLEGAR</a>    
   </div>
@@ -59,7 +59,7 @@
         -->
         <div class="main-bloque">
             <img data-aos="fade-up"  src="./figuras/icon-3.png" alt="">
-            <p data-aos="fade-up" >TU PRESENCIA ES MUY IMPORTANTE, NO OLVIDES CONFIRMAR ASISTENCIA CON MIS PAPIS ANTES DEL 08 DE SEPTIEMBRE </p>
+            <p data-aos="fade-up" >TU PRESENCIA ES MUY IMPORTANTE, NO OLVIDES CONFIRMAR ASISTENCIA ANTES DEL 08 DE SEPTIEMBRE </p>
             <a  data-aos="fade-up" class="boton" target="_blank"  href="https://wa.link/5vktb0">CONFIRMAR CON PAPÁ</a> <br><br>    
             <a  data-aos="fade-up" class="boton" target="_blank"  href="https://wa.link/3kperk">CONFIRMAR CON MAMÁ</a> 
           </div>
