--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         -->
         <div class="main-bloque">
             <img data-aos="fade-up"  src="./figuras/icon-3.png" alt="">
-            <p data-aos="fade-up" >¡NO FALTES! TU PRESENINCIA HARÁ QUE ESTE DÍA SEA AÚN MÁS ESPECIAL. NO OLVIDES CONFIRMAR ASISTENCIA ANTES DEL 08 DE SEPTIEMBRE </p>
+            <p data-aos="fade-up" >¡NO FALTES! TU PRESENINCIA HARÁ QUE ESTE DÍA SEA AÚN MÁS ESPECIAL. NO OLVIDES CONFIRMAR ASISTENCIA ANTES DEL 08 DE SEPTIEMBRE. <br> MALLA + TOALLA - DIVERSIÓN ASEGUARDA. ¡NO TE OLVIDES QUE HAY PILETA! </p>
             <a  data-aos="fade-up" class="boton" target="_blank"  href="https://wa.link/5vktb0">CONFIRMAR CON PAPÁ</a> <br><br>    
             <a  data-aos="fade-up" class="boton" target="_blank"  href="https://wa.link/3kperk">CONFIRMAR CON MAMÁ</a> 
           </div>
